# ur16_ros2

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  run.sh
bw_ur_moveit_config/: package.xml
bw_ur_moveit_config/launch/: ur_moveit.launch.py
mir250_ur16e_description/: CMakeLists.txt  package.xml
mir250_ur16e_description/config/: ur16e_calibration.yaml
mir250_ur16e_description/launch/: ur_mir250_control.launch.py
mir250_ur16e_description/urdf/: fixed_objects.urdf.xacro  mir250.urdf.xacro  mir250_fixed.urdf.xacro  ur_macro.xacro  ur_mir250.urdf.xacro  ur_mir250_control.urdf.xacro
mir250_ur16e_moveit_config/: CMakeLists.txt  package.xml
mir250_ur16e_moveit_config/launch/: mir250_ur16e_moveit.launch.py
mir250_ur16e_moveit_config/srdf/: ur.srdf.xacro  ur_macro.srdf.xacro
ros2_packages/bw_ur_moveit_config/: CMakeLists.txt
ros2_packages/bw_ur_moveit_config/config/: kinematics.yaml
ros2_packages/bw_ur_moveit_config/launch/: ur_moveit.launch.py
ros2_packages/unity_scene_updater/: CMakeLists.txt  package.xml
ros2_packages/unity_scene_updater/src/: primitives_updater.cpp
ros2_packages/unity_ur16e_mover_node/: CMakeLists.txt  package.xml
ros2_packages/unity_ur16e_mover_node/src/: unity_ur16e_mover.cpp
ros2_packages/ur16e_master_launcher/: package.xml  setup.cfg  setup.py
ros2_packages/ur16e_master_launcher/launch/: ur_full_stack.launch.py
ros2_packages/ur16e_unity_interfaces/: CMakeLists.txt  package.xml
ros2_packages/ur16e_unity_interfaces/srv/: AddPrimitive.srv  UR16eMoverService.srv  UR16ePathPlan.srv  UpdatePlanningScene.srv
ros2_packages/ur16e_unity_path_planner/: CMakeLists.txt  package.xml
ros2_packages/ur16e_unity_path_planner/src/: ur16e_path_mover.cpp
unity_scene_updater/: CMakeLists.txt  package.xml
unity_scene_updater/src/: planning_scene_updater.cpp  primitives_updater.cpp
unity_ur16e_mover_node/: CMakeLists.txt  package.xml
unity_ur16e_mover_node/src/: unity_ur16e_mover.cpp
ur16e_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur16e_moveit_config/config/: dummy.moveit.rviz  initial_positions.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ur.srdf  ur.urdf.xacro
ur16e_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  ur_moveit.launch.py
ur16e_mover/: CMakeLists.txt  package.xml
ur16e_mover/src/: ur16e_test_mover.cpp  ur16e_test_mover_old.cpp
ur16e_unity_interfaces/: CMakeLists.txt  package.xml
ur16e_unity_interfaces/srv/: AddPrimitive.srv  UR16eMoverService.srv
