<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unity_scene_updater</name>
  <version>0.1.0</version>
  <description>
    A ROS 2 package that provides a service for adding/removing primitive
    collision objects (boxes & planes) into the MoveIt2 planning scene.
  </description>

  <license>Apache-2.0</license>

  <maintainer email="you@example.com">Arnaud Candaele</maintainer>
  <author email="you@example.com">Arnaud Candaele</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
