<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur16e_master_launcher</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="arnaud.candaele@buildwise.be">nordbo</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>ros_tcp_endpoint</exec_depend>
  <exec_depend>bw_ur_moveit_config</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
