<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur16e_unity_path_planner</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="arnaud.candaele@buildwise.be">acandael</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>ur16e_unity_interfaces</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>ur16e_unity_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
